renamed data.js added fixed spacing between services/portfolio/testimonials

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,7 @@
     display: inline-block;
     text-align: center;
     width: 1200px;   
-    margin: 0px calc(50% - 600px);
+    margin: 80px calc(50% - 600px) ;
 }
 
  .portfolio {
