--- a/css/services.css
+++ b/css/services.css
@@ -5,7 +5,7 @@
     margin-top: 100px;
     position: relative;
     width: 100%;
-    padding-bottom: 15rem;
+    padding-bottom: 5rem;
     padding-top: 5rem;
 }
 
